<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_playingDate"
            android:text="@string/playing_date"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"                >

                <TextView
                    android:id="@+id/tv_homeTeamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/home_team_name"
                    android:textSize="7pt"
                    android:typeface="sans"
                    android:textColor="@android:color/holo_green_dark"
                    />

                <TextView
                    android:id="@+id/tv_homeTeamScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/initial_score"
                    android:textSize="10pt"
                    android:textStyle="bold"
                    android:layout_weight="2.4"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_awayTeamScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/initial_score"
                    android:textSize="10pt"
                    android:textStyle="bold"
                    android:layout_weight="2.4"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/tv_awayTeamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/away_team_name"
                    android:textSize="7pt"
                    android:typeface="sans"
                    android:textColor="@android:color/holo_green_dark"
                    />



            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
